# aws-demo-application

./: .env.example  .gitignore  CLAUDE.md  DEMO_COMPLETION_REPORT.md  Makefile  README.md  build-all.sh  conver.txt  docker-compose.yml
.github/workflows/: ci.yml
admin-dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
admin-dashboard/src/app/: globals.css  layout.tsx  page.tsx
admin-dashboard/src/lib/: api.ts  auth.ts
admin-dashboard/src/types/: index.ts
docs/: database-schema.md
infrastructure/argocd/: README.md
infrastructure/argocd/applications/: alb-controller.yaml  clickhouse.yaml  grafana-lgtm.yaml  hirehub-services.yaml  hirehub.yaml  karpenter.yaml  keda.yaml  kong-plugins.yaml  kong.yaml  kube-prometheus-stack.yaml  loki.yaml  mimir.yaml  monitoring-stack.yaml  observability.yaml  otel-collector.yaml  root-app.yaml  tempo.yaml
infrastructure/argocd/applicationsets/: hirehub-envs.yaml
infrastructure/argocd/install/: values.yaml
infrastructure/argocd/kong-plugins/: api-routes.yaml  cors.yaml  jwt-auth.yaml  kustomization.yaml  rate-limiting.yaml  request-termination.yaml
infrastructure/argocd/projects/: hirehub.yaml  infra.yaml
infrastructure/helm/: README.md
infrastructure/helm/hirehub/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
infrastructure/k8s/: kustomization.yaml
infrastructure/k8s/base/: external-secrets.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  service-account.yaml
infrastructure/k8s/demo/: ingress.yaml  kong-cors-plugin.yaml  namespace.yaml  postgres.yaml  services.yaml
infrastructure/kind/: cluster-config.yaml
infrastructure/terraform/: backend.tf
infrastructure/terraform/deploy/: main.tf  tfplan
proto/: buf.gen.yaml  buf.yaml  go.mod
proto/apply/v1/: apply.pb.go  (+2 more)
scripts/: deploy-frontend-static.sh  generate-proto.sh  init-db.sql  migrate-to-ecr-crane.sh  migrate-to-ecr.sh
scripts/seed/: config.py  requirements.txt  seed.py
services/ai-service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/ai-service/alembic/: env.py
services/ai-service/alembic/versions/: 001_init.py
services/ai-service/app/: __init__.py  main.py
services/ai-service/app/api/routes/: __init__.py  analysis.py  embedding.py  pii.py  rag.py
services/ai-service/app/core/: __init__.py  bedrock.py  config.py  database.py
services/ai-service/app/models/: __init__.py  ai_task.py  schemas.py
services/ai-service/app/repositories/: __init__.py  ai_task_repository.py
services/ai-service/app/services/: __init__.py  analysis_service.py  embedding_service.py  matching_agent.py  pii_pipeline.py  pii_service.py
services/ai-service/tests/: conftest.py  test_pii_service.py
services/apply-service/: Dockerfile  go.mod  go.sum
services/job-service/: Dockerfile  build.gradle
services/match-service/: Dockerfile  pyproject.toml  requirements.txt
services/match-service/alembic/: env.py
services/match-service/alembic/versions/: 001_init.py
services/match-service/app/: __init__.py  main.py
services/match-service/app/api/: __init__.py
services/match-service/app/api/routes/: __init__.py  match.py
services/match-service/app/core/: __init__.py  config.py  database.py  redis.py
services/match-service/app/models/: __init__.py  match.py  schemas.py
services/match-service/app/repositories/: __init__.py  match_repository.py
services/match-service/app/services/: __init__.py  match_service.py
services/match-service/tests/: conftest.py  test_match_service.py
services/notification-service/: Dockerfile  go.mod  go.sum
services/resume-service/: Dockerfile  pyproject.toml  requirements.txt
services/user-service/: Dockerfile  go.mod  go.sum
services/web-frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
tests/k6/: k6-job.yaml  scenarios.js  simple-test.yaml
web-frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+363 files in other folders)
